--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap");
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: "Nanum Gothic", sans-serif;
   font-weight: 400;
+  font-style: normal;
+  width: 100%;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -13,8 +17,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  width: 100%;
+}
+
 a {
-  font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
@@ -25,9 +32,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   justify-content: center;
   min-width: 320px;
+  width: 100%;
   min-height: 100vh;
 }
 
@@ -41,8 +48,6 @@ button {
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
@@ -57,6 +62,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
+    width: 100%;
     color: #213547;
     background-color: #ffffff;
   }
