--- a/src/pages/Login/styles.module.css
+++ b/src/pages/Login/styles.module.css
@@ -4,6 +4,25 @@
   align-items: center;
 }
 
+.loginPage .title {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.loginPage .title div:nth-child(1) {
+  width: 30px;
+  margin-left: 10px;
+}
+
+.loginPage .title div:nth-child(3) {
+  width: 30px;
+  visibility: hidden;
+  margin-left: 10px;
+}
+
 .loginForm {
   display: flex;
   flex-direction: column;
@@ -14,8 +33,8 @@
   background-image: url("../../assets/logo.svg");
   background-repeat: no-repeat;
   background-size: contain;
-  width: 300px;
-  height: 200px;
+  width: 200px;
+  height: 150px;
 }
 
 .loginPage div {
@@ -40,6 +59,7 @@
 
 .loginPage .loginButton {
   background-color: #ffae1e;
+  color: white;
   width: 300px;
   font-size: 16px;
 }
