--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap");
 
 :root {
-  font-family: "Nanum Gothic", sans-serif;
-  font-weight: 400;
+  font-family: "STUNNING-Bd";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2410-2@1.0/STUNNING-Bd.woff2")
+    format("woff2");
+  font-weight: normal;
   font-style: normal;
-  width: 100%;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 #root {
