--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap");
 
-:root {
-  font-family: "STUNNING-Bd";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2410-2@1.0/STUNNING-Bd.woff2")
-    format("woff2");
-  font-weight: normal;
+@font-face {
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -29,6 +29,7 @@ body {
   min-width: 320px;
   width: 100%;
   min-height: 100vh;
+  font-family: "Pretendard-Regular", sans-serif;
 }
 
 h1 {
