--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,8 @@
 @tailwind utilities;
 
 .input-base {
-  @apply mb-28 h-36 w-300 border-b border-gray-300 p-10 text-sm focus:outline-none;
+  @apply h-36 w-300 border-b border-gray-300 p-10 text-sm focus:outline-none;
+}
+input::placeholder {
+  font-size: 13px;
 }
